<resources>
    <string name="app_name">油补贴商家端</string>
    <string name="str_login">登录</string>
    <string name="str_cancle">取消</string>
    <string name="str_know">知道了</string>
    <string name="str_refresh_text">正在加载更多...</string>
    <string name="str_take_pictrue">拍照</string>
    <string name="str_mobile_select_pic">相册选择</string>
    <string name="str_cancel">取消</string>
    <string name="str_order_manager">订单管理</string>
    <string name="str_clent_manager">客户管理</string>
    <string name="str_merchant_manager">门店管理</string>
    <string name="str_statistics">统计分析</string>
    <string name="str_save">保存</string>
    <string name="str_exchange_swip">兑换扫描 </string>
    <string name="str_str_already_down_order">已下单</string>
    <string name="str_merchant_receive_order">商家接单</string>
    <string name="str_service_finish">服务完成</string>
    <string name="str_get_car">已取车</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_test_nick">程序员</string>
    <string name="str_test_time">2015-11-11 09:00</string>
    <string name="str_receive_order">接单</string>
    <string name="str_order_info">订单信息</string>
    <string name="str_go_see">去看看</string>
    <string name="str_down_order_succeed">下单成功，商家已接单</string>
    <string name="str_service_evaluate_desc">本次服务已经完成，赶紧来评价吧!</string>
    <string name="str_service_evaluate">服务评价</string>
    <string name="str_service_quality">服务质量</string>
    <string name="str_input_evaluate_content">请输入您评论的内容</string>
    <string name="str_submit">提交</string>
    <string name="str_me_evaluate">我的评价</string>
    <string name="str_go_evaluate">去评价</string>
    <string name="str_contact_merchant">联系商家</string>
    <string name="str_service_content">服务内容</string>
    <string name="str_order_detail">订单详情</string>
    <string name="str_order_number">订单号码</string>
    <string name="str_down_order_time">下单时间</string>
    <string name="str_pay_time">付款时间</string>
    <string name="str_pay_way">支付方式</string>
    <string name="str_order_status">订单状态</string>
    <string name="str_order_total_money">订单总价</string>
    <string name="str_wait_pay">等待付款</string>
    <string name="str_collection">收款</string>
    <string name="str_already_collection">已收款</string>
    <string name="str_service_cost">本次服务费用:</string>
    <string name="str_input_service_total_money">请输入服务总费用</string>
    <string name="str_contrim_collection">确认收款</string>
    <string name="str_client_evaluate">客户评价</string>
    <string name="str_not_evaluate">暂无评价</string>
    <string name="str_online_ad">在线广告</string>
    <string name="str_service_list">服务列表</string>
    <string name="str_merchant_ad">门店广告</string>
    <string name="str_merchant_ad_des">您在门店广告这里输入的广告信息将会展示給所有查看您门店信息的用户</string>
    <string name="str_ad_title">广告标题</string>
    <string name="str_valid_time">有效期限</string>
    <string name="str_zhi">至</string>
    <string name="str_push_target">推送目标</string>
    <string name="str_total_car">全部车型</string>
    <string name="str_ad_content">广告内容</string>
    <string name="str_send_ad_des">请先选择服务，并在此填写广告内容</string>
    <string name="str_contrim_send">确认发布</string>
    <string name="str_input_ad_title">请输入广告标题</string>
    <string name="str_confirm">确定</string>
    <string name="str_year">年</string>
    <string name="str_month">月</string>
    <string name="str_day">日</string>
    <string name="str_already_select_car">已选车型</string>
    <string name="str_cur_select_car">当前已选车型</string>
    <string name="str_buy_num">来店%s次</string>
    <string name="str_car_num">车牌号</string>
    <string name="str_car">车型</string>
    <string name="str_mileage">行驶公里数</string>
    <string name="str_search_address_book_friend">搜索通讯录好友</string>
    <string name="str_invite">邀请</string>
    <string name="str_already_invite">已邀请</string>
    <string name="str_sms_moudle">尊贵的车主，我在油补贴享受“看广告，赚油费”福利，你敢来，我敢送，快来加入吧！</string>
    <string name="str_car_wash">洗车</string>
    <string name="str_wax">抛光打蜡</string>
    <string name="str_pad_pasting">贴膜</string>
    <string name="str_tyre">轮胎</string>
    <string name="str_clean_trim">内饰清洗</string>
    <string name="str_pan_bottom">盘底装甲</string>
    <string name="str_dujing">镀晶</string>
    <string name="str_clean_air_condition">空调清洗</string>
    <string name="str_lacquer">钣金喷漆</string>
    <string name="str_wheel_location">四轮定位</string>
    <string name="str_refuel">加油</string>
    <string name="str_brake_disc">刹车盘/片</string>
    <string name="str_windshield_wiper">换雨刷</string>
    <string name="str_accumulator">换蓄电池</string>
    <string name="str_ignition_plug">换火花塞</string>
    <string name="str_antifreezing_solution">防冻液</string>
    <string name="str_dynamo_clean">发电机清洗</string>
    <string name="str_restrictor">节气门</string>
    <string name="str_idle_time">闲时</string>
    <string name="str_busy_time">忙时</string>
    <string name="str_service_list_desc">请选择本店的服务内容，若您需要添加新服务类型请点击右上角“添加”按钮</string>
    <string name="str_setting_price">设置价格</string>
    <string name="str_click_upload_merchant_pic">点击上传门店图片</string>
    <string name="str_merchant_name">店名</string>
    <string name="str_please_inpit_merchant_name">请填写店名</string>
    <string name="str_location">地理位置</string>
    <string name="str_please_input_location">请输入地理位置</string>
    <string name="str_business_time">经营时间</string>
    <string name="str_select_end_time">选择结束时间</string>
    <string name="str_tel">电话</string>
    <string name="str_please_inpit_tel">请填写电话号码</string>
    <string name="str_hour">时</string>
    <string name="str_minute">分钟</string>
    <string name="str_select_start_time">选择开始时间</string>
    <string name="str_custom_merchant_service_desc">若您的店有特色服务，请再次输入服务类型</string>
    <string name="str_input_service_content">请输入服务内容，不超过10个字</string>
    <string name="str_price">价格</string>
    <string name="str_input_price">输入价格</string>
    <string name="str_service">服务</string>
    <string name="str_already_withdraw_money">已提现金额</string>
    <string name="str_money_bill">月流水账单</string>
    <string name="str_total_oli_number">总油点数</string>
    <string name="str_can_withdraw_money">可提现金额</string>
    <string name="str_request_withdraw">申请提现</string>
    <string name="title_activity_apply_withdraw">ApplyWithdrawActivit</string>
    <string name="str_apply_withdraw_money">申请提现金额</string>
    <string name="str_input_money">请输入金额</string>
    <string name="str_tips">温馨提示：</string>
    <string name="str_submit_apply">提交申请</string>
    <string name="str_￥">￥%s</string>
    <string name="str_withdraw_succeed_desc">提现金额将在一个工作日到您的银行卡</string>
    <string name="str_card_info">银行卡信息</string>
    <string name="str_withdraw_record">提现记录</string>
    <string name="str_progress">处理中</string>
    <string name="str_withdraw_succeed">提现成功</string>
    <string name="str_please_input_you_mobile">请输入您的手机号码</string>
    <string name="str_forget_password">忘记密码?</string>
    <string name="str_please_inpit_psd">请输入您的帐号密码</string>
    <string name="str_please_input_mobile_sms">请输入手机验证码</string>
    <string name="str_get_test_code">获取验证码</string>
    <string name="str_manager_account">管理员帐号</string>
    <string name="str_quit">退出</string>
    <string name="str_recommend_friend">推荐好友</string>
    <string name="str_idea_feekback">意见反馈</string>
    <string name="str_version_update">版本更新</string>
    <string name="str_about_we">关于我们</string>
    <string name="str_setting">设置</string>
    <string name="str_goods_detail">商品详情</string>
    <string name="str_exchange_desc">信息正确，请予兑换</string>
    <string name="str_exchange">兑换</string>
    <string name="str_get_succeed_desc" formatted="false">车主%s已领走了%s个%s</string>
    <string name="str_already_get">已领取</string>
    <string name="str_push_receive_order_title">商家接单了</string>
    <string name="str_push_receive_order_message">商家接单了 快来看看吧</string>
    <string name="str_push_merchant_collect_title">商家收款</string>
    <string name="str_push_merchant_collect_msg">商家收款拉</string>
    <string name="str_push_merchant_invite_member_title">门店邀请会员</string>
    <string name="str_push_merchant_invite_member_content" formatted="false">尊贵的车主，%s诚邀您成为本店会员，享受VIP服务。</string>
    <string name="str_push_merchant_ad_title">门店活动</string>
    <string name="str_push_merchant_ad_content">%s发出新的优惠活动，快来看看吧</string>
    <string name="str_please_input">请输入</string>
    <string name="str_tag_is_vip">is_vip</string>
    <string name="str_push_service_finshed_title">服务完成</string>
    <string name="str_push_service_finshed_content">亲爱的车主，您的爱车服务完成，请前来取车</string>
    <string name="str_go_experience">立即体验</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开手刷新</string>
    <string name="str_loading">正在加载更多</string>
    <string name="str_about_me_desc">广州车悦会信息科技有限公司，成立于2014年12月。专注于连接车主与车后服务的市场，致力打造车主出行的便捷配套。在商家与车主之间建立有效互联并为商家打造精准的营销以及广告平台。</string>
</resources>
