<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view_gap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/whiteffffff">

        <TextView
            android:id="@+id/id_select_cancle"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:background="@drawable/selector_bg_white_item"
            android:gravity="center"
            android:text="@string/str_cancel"
            android:textColor="@color/greycac1c2"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/id_select_confirm"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_bg_white_item"
            android:gravity="center"
            android:text="@string/str_confirm"
            android:textColor="@color/yellowf0c008"
            android:textSize="16sp" />

        <View
            style="@style/line_grey_2px"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:background="@color/whiteffffff"
        android:paddingBottom="11dp"
        android:paddingLeft="31dp"
        android:paddingRight="31dp"
        android:paddingTop="11dp">

        <TextView
            android:id="@+id/id_select_time_desc"
            style="@style/text_deep_grey_14sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_select_start_time" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="27dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <kankan.wheel.widget.WheelView
                android:id="@+id/id_wheelview_month"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="33dp"></kankan.wheel.widget.WheelView>

            <TextView
                style="@style/text_deep_grey_14sp"
                android:layout_marginLeft="6dp"
                android:text="@string/str_hour"
                android:textColor="@color/greyaa9b9e" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <kankan.wheel.widget.WheelView
                android:id="@+id/id_wheelview_day"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="33dp"></kankan.wheel.widget.WheelView>

            <TextView
                style="@style/text_deep_grey_14sp"
                android:layout_marginLeft="6dp"
                android:text="@string/str_minute"
                android:textColor="@color/greyaa9b9e" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>